<resources>
    <string name="app_name">Worship Center</string>
    <!--Title-->
    <string name="first_slide_title">Our Vision &amp; Mission</string>
    <string name="second_slide_title">Cell and Clan Activities</string>
    <string name="third_slide_title">Church Sermons</string>
    <string name="fourth_slide_title">Church Events</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Transforming Christ Reigning in the City, On a Mission to Love and Touch the City with His Compassion. </string>
    <string name="second_slide_desc">Where you belong and share the journey of following christ while connecting with your community and meeting new people.</string>
    <string name="third_slide_desc">Don’t miss any sermon, we have it all with fast access, neatly designed to allow you read it and enjoy the word of God. </string>
    <string name="fourth_slide_desc">We shall show you all the upcoming events organized by the church. stay tuned not to miss any. </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="title_home">Home</string>
    <string name="title_profile">About</string>
    <string name="title_Sermon">Sermon</string>
    <string name="title_for_you">Programs</string>
    <string name="title_Alerts">Alerts</string>

    <string name="default_notification_channel_id">PushNotifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_api_key">c13947fd4f4f71afeffbb9214a33b3c9</string>
    <string name="error_msg_unknown">message unknown</string>
    <string name="error_msg_no_internet">no internet</string>
    <string name="error_msg_timeout">request timeout</string>


    <!--    sectioned Recylerview-->
    <string name="linear_sectioned_recyclerview_vertical">Linear Sectioned RecyclerView (Vertical)</string>
    <string name="linear_sectioned_recyclerview_horizontal">Linear Sectioned RecyclerView (Horizontal)</string>
    <string name="grid_sectioned_recyclerview">Grid Sectioned RecyclerView</string>
    <string name="show_all">Show All</string>

    <string name="share_type_artist">artist</string>
    <string name="share_type_collection">collection</string>
    <string name="share_type_track">track</string>
    <string name="share_type_playlist">playlist</string>
    <string name="share_type_event">event</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>

    <string name="cartcoutAction">cartmsg</string>
    <string name="cartCount">cartcount</string>
    <string name="google_maps_key">AIzaSyB9MxxJBmzLHdfsMEZSdV0vORR_MRwirPI</string>
    <string name="i_am_here">I am Here</string>
    <string name="provider_failed">Provider Failed</string>
    <string name="search_hint">Search</string>
    <string name="about_church">PAG Worship Centre is a church of believers who were thirsty for a congregational worship teamed up to begin a service. In their midst were servants of God who have a passion for True Worship and a Leadership that transforms a Christian life through holistic approach. Mathew 5:14-15.\"you are the Light of World” Shine your Light so your Father in Heaven be glorified” We are Christ Church</string>
    <string name="request_lyrics">Worship Center Down-Town Lira Radio</string>
    <string name="songId">bc_songID</string>
</resources>
