<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/solar_music_library_2_outline"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_music"
        android:enabled="true"
        android:icon="@drawable/ic_component_2__2_"
        android:title="@string/title_for_you" />
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_wc_book"
        android:title="@string/title_Sermon" />
    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/material_symbols_notifications_active_outline_rounded"
        android:title="@string/title_Alerts" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_myuser"
        android:title="@string/title_profile" />


</menu>